Use Collectors.toList() in EitherTest for compatibility with the test compile level
Stream.toList() is Java 16+; the test build target compiles below that, so it failed to build once wired into Bazel. Use collect(Collectors.toList()) instead.